# udp-data-extract

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  extract_task_1.csv
include/: aggregate.hpp  client.hpp  client1.hpp  clock.hpp  control_channel.hpp
src/: aggregate.cpp  client.cpp  client1.cpp  client1_main.cpp  client2_main.cpp  control_channel.cpp
tools/: log_tcp_stream.py  test_control_channel.py
